--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* global styling*/
 html{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Playfair Display;
   margin: 0rem 2rem;
-  background-color: #ffffff;
+  background-color: #ffe9c2;
 }
 
 /* Banner image*/
@@ -22,7 +22,7 @@ nav ul{
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: grey;
+  background-color: #8dca81;
   top: 0;
   width: 100%;
   text-align: center;
@@ -37,18 +37,18 @@ nav ul li{
 /* the nav text */
 nav li a{
   display: block;
-  color: white;
+  color: #ffffff;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 nav li:hover{
-  background-color: orangered;
+  background-color: #ffef8a;
 }
 
 nav #active{
-  background-color: darkgreen;
+  background-color: #32004d;
 }
 
 /* Styling for the main section*/
@@ -60,8 +60,8 @@ main{
 
 /* H1 uses a google font. Check out https://www.w3schools.com/howto/howto_google_fonts.asp to change - also see line 9 in your html page*/
 h1 {
-  color: darkblue;
-  font-family: 'Caesar Dressing';
+  color: #520070;
+  font-family: 'Playfair Display';
   font-size: 60px;
   text-align: center;
   margin-bottom: 1rem;
